lab04 and lab06