@@ -4,9 +4,11 @@ import org.example.caching.Cache;
 import org.example.caching.loaders.DictionaryCacheLoader;
 import org.example.model.Dictionary;
 import org.junit.jupiter.api.Test;
+import static java.util.stream.Collectors.toList;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.*;
@@ -18,7 +20,7 @@ public class TestDictionaryCacheLoader {
         new DictionaryCacheLoader().load();
         List<Dictionary> dictionaries = (List<Dictionary>) Cache.getInstance().get("dictionaries");
         assertThat(dictionaries, hasSize(10));
-        List<String> dictionaryNames = dictionaries.stream().map(x->x.getDictionaryName()).distinct().toList();
+        List<String> dictionaryNames = dictionaries.stream().map(x->x.getDictionaryName()).distinct().collect(Collectors.toList());
         assertThat(dictionaryNames, hasItems("Region","City", "AddressType", "UserType"));
     }
 }
